gcc-8 (8.4.0-4) UNRELEASED; urgency=medium

  * Fix local patch for PR jit/87808. Addresses: #954898.

 -- Matthias Klose <doko@debian.org>  Mon, 20 Apr 2020 10:45:24 +0200

gcc-8 (8.4.0-3) unstable; urgency=medium

  * Update to git 20200402 from the gcc-8 branch.
    - Fix PR target/93819 (PPC), PR target/87583 (PPC), PR gcov-profile/91601,
      PR lto/94249, PR c++/84733, PR fortran/94030, PR fortran/92775,
      PR fortran/93484.
  * Fix libgcc-sN dependency generation. Closes: #954826.

 -- Matthias Klose <doko@debian.org>  Thu, 02 Apr 2020 15:30:15 +0200

gcc-8 (8.4.0-2) unstable; urgency=medium

  * Update to git 20200323 from the gcc-8 branch.
    - Fix PR driver/92757, PR tree-optimization/94163, PR libgcc/85334,
      PR rtl-optimization/94119, PR target/91913 (ARM), PR c/93949,
      PR c++/92909, PR c++/92068, PR c++/93248, PR fortran/93462.
  * For all runtime libraries, generate dependencies on libgcc-sN instead
    on libgccN, when libgccN isn't built from this source package.
  * Stop shipping the include-fixed directory.
  * Move limits.h and syslimits.h into <gcc-lib-dir>/include, and remove
    <gcc-lib-dir>/include-fixed.
  * Fix building gnattools in an amd64 "cross" build.
  * Generate dependencies on libgcc-sN if not building the common packages.

 -- Matthias Klose <doko@debian.org>  Mon, 23 Mar 2020 16:00:42 +0100

gcc-8 (8.4.0-1) unstable; urgency=medium

  * GCC 8.4.0 release.
    - Fix PR target/91276 (PPC), PR tree-optimization/93820,
      PR rtl-optimization/93908, PR tree-optimization/93767,
      PR tree-optimization/93434, PR middle-end/92768,
      PR tree-optimization/92420, PR middle-end/90313, PR c++/92003,
      PR target/93658 (PPC), PR target/93568 (PPC), PR target/93828 (x86),
      PR target/93656 (x86), PR c++/93905, PR c++/90998, PR c++/86521,
      PR c++/90546, PR c++/86521, PR c++/89831, PR c++/88380, PR c++/87685,
      PR c++/86747, PR c++/86429, PR c++/82643, PR c++/87327, PR c++/87748,