@@ -865,7 +865,7 @@ ifeq ($(with_libgccjit),yes)
   addons += libjit
 endif
 ifeq ($(with_offload_nvptx),yes)
-  addons += olnvptx libgompnvptx
+  addons += olnvptx gompnvptx
 endif
 ifeq ($(with_libcc1),yes)
   addons += libcc1
