@@ -1,6 +1,8 @@
 gcc-8 (8.4.0-4) UNRELEASED; urgency=medium
 
   * Fix local patch for PR jit/87808. Addresses: #954898.
+  * Don't include lib*gomp1 and libgcc4 in the control file, when not building
+    the common libraries.
 
  -- Matthias Klose <doko@debian.org>  Mon, 20 Apr 2020 10:45:24 +0200
 
